# mai-oop

./: .gitignore  CMakeLists.txt  README.md
l1/: CMakeLists.txt  main.cpp  task.hpp  tests.cpp
l2/: CMakeLists.txt
l2/include/: math.h  thirteen.h
l2/src/: main.cpp  thirteen.cpp
l2/tests/: tests.cpp
l3/: CMakeLists.txt
l3/include/: figure.h  point.h  rect.h  rhombus.h  trapezium.h
l3/src/: main.cpp  point.cpp  rect.cpp  rhombus.cpp  trapezium.cpp
l3/tests/: tests.cpp
l4/: CMakeLists.txt
l4/include/: array.h  figure.h  point.h  rect.h  rhombus.h  trapezium.h
l4/src/: main.cpp
l4/test/: tests.cpp
l5/: CMakeLists.txt
l5/include/: allocator.h  vector.h
l5/src/: main.cpp
l5/test/: main.cpp
l6/: CMakeLists.txt
l6/include/: druid.hpp  elf.hpp  factory.hpp  knight.hpp  npc.hpp  observer.hpp  visitor.hpp
l6/lib/: druid.cpp  elf.cpp  knight.cpp  npc.cpp
l6/src/: main.cpp
l6/test/: npc.cpp  visitor.cpp
l7/: CMakeLists.txt
l7/include/: druid.hpp  elf.hpp  factory.hpp  fight.hpp  knight.hpp  npc.hpp  observer.hpp
l7/lib/: druid.cpp  elf.cpp  knight.cpp  npc.cpp
l7/src/: main.cpp
l7/test/: main.cpp
